// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Edit > renders an edit component 1`] = `
<div>
  <div
    id="toolbar"
  >
    <div
      id="Portal"
    />
  </div>
  <div
    id="page-edit"
  >
    <div
      data-schema="{
  "some": "field"
}"
      id="Form"
    />
  </div>
  <div
    id="sidebar"
  >
    <div
      id="Sidebar"
    />
  </div>
</div>
`;

exports[`Edit > renders an empty edit component 1`] = `
<div>
  <div
    id="toolbar"
  >
    <div
      id="Portal"
    />
  </div>
  <div
    id="page-edit"
  >
    <div
      data-schema="null"
      id="Form"
    />
  </div>
  <div
    id="sidebar"
  >
    <div
      id="Sidebar"
    />
  </div>
</div>
`;
